[gd_scene load_steps=3 format=3 uid="uid://bsq2r3ttc5exq"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_a04t8"]
[ext_resource type="Theme" uid="uid://3hg1ewgjleni" path="res://Resources/UI/default_theme.tres" id="2_ug3vf"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a04t8")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.105882)

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_right = 48.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CloseButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ug3vf")
text = "Resume"

[node name="MenuButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ug3vf")
text = "Main Menu"

[connection signal="closed" from="." to="." method="_on_closed"]
[connection signal="pressed" from="Buttons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_close_button_pressed"]
